# SolutionForCP

./: CMakeLists.txt  README.md  main.cpp  mainTest.cpp
inc/: ast.hpp  evaluators.hpp  logger.hpp  parsers.hpp  validators.hpp
src/: ast.cpp  evaluators.cpp  logger.cpp  parsers.cpp  validators.cpp
test/: test.cpp  test.hpp
